# DroneCatchingMPC

./: 20230409_todo.txt  CMakeLists.txt  README.md  noUse_CMakeLists.txt  package.xml  temp  temp2
config/: 2d_platform.yaml  2d_platform_backup.yaml  catch.yaml  gazebo_test.yaml  gazebo_test_backup.yaml
include/: catching_controller_node.h  catching_mpc.h  controller_node.h
include/my_mpc/: mympc.h
launch/: catch.launch  catching_simulation_gazebo.launch  gazebo.launch  scout.launch
solver/: acado_common.h  acado_integrator.c  acado_solver.c  nmpc_solver_setup
solver_made_from_cpp/: CMakeLists.txt  nmpc_solver_setup.cpp  nmpc_solver_setup_backup0313.cpp  nmpc_solver_setup_ratecommand.cpp
src/: catching_controller_node.cpp  catching_mpc.cc  controller_node.cpp  target_controller.cpp
